Added study notes for Java SE 21 certification